# bakery_scanner_train

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: pull_request_template.md
configs/base_cycle/: base_v2.yaml
configs/benchmark/: incremental_resnet18_cpu.yaml
configs/classifier/: resnet18_base.yaml  resnet18_incremental.yaml
configs/detector/: yolo11n_base.yaml
configs/detector_cycle/: yolo11n_s42_val0503.yaml  yolo11n_s42_val0509.yaml  yolo26m_s42_val0503.yaml  yolo26m_s42_val0509.yaml  yolo26s_s42_val0503.yaml  yolo26s_s42_val0503_selected.yaml  yolo26s_s42_val0509.yaml  yolo26s_s42_val0509_selected.yaml  yolo26s_s43_val0503.yaml  yolo26s_s43_val0503_selected.yaml  yolo26s_s43_val0509.yaml  yolo26s_s43_val0509_selected.yaml  yolo26s_s44_val0503.yaml  yolo26s_s44_val0503_selected.yaml  yolo26s_s44_val0509.yaml  yolo26s_s44_val0509_selected.yaml
configs/detector_ensemble/: yolo26s_s42_s44_val0503.yaml  (+1 more)
datasets/: class_registry.json
docs/: agent-git-workflow.md
tests/: conftest.py  test_artifact_paths.py  test_audit.py  test_base_cycle.py  test_base_cycle_cli.py  test_classifier_data_cli.py  test_classifier_dataset.py  test_classifier_evaluation.py  test_classifier_train_cli.py  test_classifier_training.py  test_cli.py  test_coco.py  test_cpu_benchmark.py  test_cpu_benchmark_cli.py  test_detector_cli.py  test_detector_dataset.py  test_detector_ensemble.py  test_detector_ensemble_cli.py  test_detector_evaluation.py  test_detector_postprocess.py  test_detector_train_cli.py  test_detector_training.py  test_e2e_cli.py  test_e2e_evaluation.py  test_e2e_inference.py  test_final_evaluation.py  test_final_evaluation_cli.py  test_registry.py  test_safety.py  test_splits.py  test_synthetic.py  test_synthetic_cli.py  test_yolo_dataset.py
(+74 files in other folders)
