[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bakery-scanner-train"
version = "0.1.0"
description = "Validated data and detector/classifier training foundations for Bakery Scanner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=12,<13",
  "PyYAML>=6,<7",
  "torch>=2.13,<2.14",
  "torchvision>=0.28,<0.29",
  "ultralytics>=8.4,<9",
]

[project.optional-dependencies]
test = ["pytest>=9,<10"]

[project.scripts]
bakery-audit = "bakery_scanner.cli:main"
bakery-synthetic = "bakery_scanner.synthetic_cli:main"
bakery-detector-data = "bakery_scanner.detector_cli:main"
bakery-detector = "bakery_scanner.detector_train_cli:main"
bakery-classifier-data = "bakery_scanner.classifier_data_cli:main"
bakery-classifier = "bakery_scanner.classifier_train_cli:main"
bakery-e2e = "bakery_scanner.e2e_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]
